Rename calendar events filter params to reflect the underlying query more accurately
